--- a/views/index.jade
+++ b/views/index.jade
@@ -13,9 +13,9 @@ block content
         ul
             | 3) If it does not contain a date or Unix timestamp, it returns null for those properties.
     h3 Example usage:
-    code https://timestamp-ms.herokuapp.com/December%2015,%202015
+    code https://expressjs-timestamp-ms.herokuapp.com/December%2015,%202015
     br
-    code https://timestamp-ms.herokuapp.com/1450137600
+    code https://expressjs-timestamp-ms.herokuapp.com/1450137600
     h3 Example output:
     code
         | {
